--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="black-translucent"
     />
 
-    <title>Noodl Viewer</title>
+    <title>Nemawashi AI Transformacion consensuada</title>
 
 
     <style>
