--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <script src="index-69bab717d2f23621.js"></script>
 <script>
 (function () {
-  Noodl.Env['BaseUrl'] = 'https://yreaction.github.io/nemawashiweb/';
+  Noodl.Env['BaseUrl'] = 'https://nemawashi.ai/';
 })();
 </script>
 
