--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
     <div id="root"></div>
 
-    <script src="react.production.min.js"></script>
-    <script src="react-dom.production.min.js"></script>
+    <script src="/react.production.min.js"></script>
+    <script src="/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="index-69bab717d2f23621.js"></script>
+    <script src="/index-7d1af3dac0fde1f2.js"></script>
 <script>
 (function () {
   Noodl.Env['BaseUrl'] = 'https://nemawashi.ai/';
@@ -68,7 +68,7 @@
 
     
 
-    <script src="noodl.deploy.js"></script>
+    <script src="/noodl.deploy.js"></script>
     <script type="application/javascript">
       document.addEventListener("DOMContentLoaded", function () {
         const root = document.getElementById("root");
