--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
 
     <title>Nemawashi AI Transformacion consensuada</title>
+<base href="https://nemawashi.ai//" target="_blank" />
 
 
     <style>
@@ -55,20 +56,20 @@
 
     <div id="root"></div>
 
-    <script src="/react.production.min.js"></script>
-    <script src="/react-dom.production.min.js"></script>
+    <script src="https://nemawashi.ai//react.production.min.js"></script>
+    <script src="https://nemawashi.ai//react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="/index-7d1af3dac0fde1f2.js"></script>
+    <script src="https://nemawashi.ai//index-c9c69f9523d2dfb8.js"></script>
 <script>
 (function () {
-  Noodl.Env['BaseUrl'] = 'https://nemawashi.ai/';
+  Noodl.Env['BaseUrl'] = 'https://nemawashi.ai//';
 })();
 </script>
 
     
 
-    <script src="/noodl.deploy.js"></script>
+    <script src="https://nemawashi.ai//noodl.deploy.js"></script>
     <script type="application/javascript">
       document.addEventListener("DOMContentLoaded", function () {
         const root = document.getElementById("root");
