--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- Caso 4: Preguntas Frecuentes -->
       <div class="use-card">
         <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 1 1 5.82 1c0 2-3 3-3 3"/><circle cx="12" cy="17" r="1"/></svg>
-        <div class="use-card-title">Preguntas Frecuentes Repetitivas</div>
+        <div class="use-card-title">Atencion al cliente</div>
         <div class="use-card-desc">Un chatbot que guía a tus clientes con la información que necesitan 24/7.</div>
         <div class="use-card-benefit">Mejora la satisfacción del cliente.</div>
       </div>
@@ -73,7 +73,6 @@
       <a href="#" title="Política de Privacidad">Política de Privacidad</a>
       <a href="#" title="Contacto">Contacto</a>
     </div>
-    <img src="images/nemaWashiLogo.png" alt="Nemawashi AI Logo" class="footer-logo" loading="lazy">
     <div class="copyright"> 2025 Nemawashi AI. Todos los derechos reservados.</div>
   </footer>
   <script>
