--- a/index.html
+++ b/index.html
@@ -28,38 +28,46 @@
 
   <!-- Use Cases Section -->
   <section class="use-cases">
-    <h2>Cómo la IA Simplifica tu Día a Día</h2>
+    <h2>Casos de Uso Reales: IA que Ahorra Tiempo</h2>
     <div class="use-cards">
-      <!-- Caso 1: Emails -->
-      <div class="use-card">
-        <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><rect x="3" y="5" width="18" height="14" rx="2"/><polyline points="3 7 12 13 21 7"/></svg>
-        <div class="use-card-title">Emails que Nunca Acaban</div>
-        <div class="use-card-desc">Un asistente IA que responde por ti las preguntas comunes.</div>
-        <div class="use-card-benefit">Recupera horas cada semana.</div>
+      <!-- Caso 1: Solicitud de Documentación Fiscal Automatizada -->
+      <div class="use-card" onclick="showUseCase(1)">
+        <div class="use-card-icon" style="font-size:2.2rem;">🧾</div>
+        <div class="use-card-title">Solicitud de Documentación Fiscal</div>
+        <div class="use-card-benefit" style="color:#2a7a2a;font-size:1.09rem;font-weight:800;">+80% tiempo ahorrado</div>
+        <div class="use-card-desc">Gestorías/Asesorías &mdash; Solicitud y seguimiento automático de documentos fiscales cada trimestre.</div>
       </div>
-      <!-- Caso 2: Citas -->
-      <div class="use-card">
-        <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><rect x="3" y="4" width="18" height="18" rx="2"/><path d="M16 2v4M8 2v4M3 10h18"/></svg>
-        <div class="use-card-title">Caos de Agendar Citas</div>
-        <div class="use-card-desc">Un sistema simple que agenda citas automáticamente según tu disponibilidad.</div>
-        <div class="use-card-benefit">Elimina errores y olvidos.</div>
+      <!-- Caso 2: Chatbot para Consultas de Declaraciones Fiscales -->
+      <div class="use-card" onclick="showUseCase(2)">
+        <div class="use-card-icon" style="font-size:2.2rem;">🤖</div>
+        <div class="use-card-title">Chatbot Declaraciones Fiscales</div>
+        <div class="use-card-benefit" style="color:#2a7a2a;font-size:1.09rem;font-weight:800;">Respuestas en &lt;1 min</div>
+        <div class="use-card-desc">Gestorías/Asesorías &mdash; Responde dudas fiscales con acceso directo a tus archivos.</div>
       </div>
-      <!-- Caso 3: Datos Manuales -->
-      <div class="use-card">
-        <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><rect x="4" y="4" width="16" height="16" rx="2"/><path d="M9 9h6M9 13h6M9 17h6"/></svg>
-        <div class="use-card-title">Datos Manuales Interminables</div>
-        <div class="use-card-desc">Automatizamos la entrada de datos desde facturas o formularios.</div>
-        <div class="use-card-benefit">Tu equipo se centra en lo importante.</div>
+      <!-- Caso 3: Gestión de Citas para Fisioterapia -->
+      <div class="use-card" onclick="showUseCase(3)">
+        <div class="use-card-icon" style="font-size:2.2rem;">📅</div>
+        <div class="use-card-title">Gestión de Citas Automática</div>
+        <div class="use-card-benefit" style="color:#2a7a2a;font-size:1.09rem;font-weight:800;">Hasta 1h/día ahorrada</div>
+        <div class="use-card-desc">Clínicas/Fisioterapia &mdash; Agenda, reprograma y confirma citas sin intervención manual.</div>
       </div>
-      <!-- Caso 4: Preguntas Frecuentes -->
-      <div class="use-card">
-        <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 1 1 5.82 1c0 2-3 3-3 3"/><circle cx="12" cy="17" r="1"/></svg>
-        <div class="use-card-title">Atencion al cliente</div>
-        <div class="use-card-desc">Un chatbot que guía a tus clientes con la información que necesitan 24/7.</div>
-        <div class="use-card-benefit">Mejora la satisfacción del cliente.</div>
+      <!-- Caso 4: Seguimiento de Interesados Inmobiliarias -->
+      <div class="use-card" onclick="showUseCase(4)">
+        <div class="use-card-icon" style="font-size:2.2rem;">🏠</div>
+        <div class="use-card-title">Seguimiento de Interesados</div>
+        <div class="use-card-benefit" style="color:#2a7a2a;font-size:1.09rem;font-weight:800;">Varias horas/día ahorradas</div>
+        <div class="use-card-desc">Inmobiliarias &mdash; Responde y coordina visitas automáticamente con IA.</div>
       </div>
     </div>
   </section>
+
+  <!-- Modales de casos de uso -->
+  <div id="usecase-modal-bg" style="display:none;position:fixed;z-index:10001;left:0;top:0;width:100vw;height:100vh;background:rgba(34,34,34,0.38);justify-content:center;align-items:center;">
+    <div id="usecase-modal" style="background:#fff;padding:32px 24px 22px 24px;border-radius:18px;box-shadow:0 8px 32px 0 rgba(34,34,34,0.13);max-width:420px;width:95vw;display:flex;flex-direction:column;gap:12px;position:relative;">
+      <button type="button" id="close-usecase-modal" style="position:absolute;top:10px;right:14px;font-size:1.5rem;background:none;border:none;cursor:pointer;">&times;</button>
+      <div id="usecase-modal-content"></div>
+    </div>
+  </div>
 
   <!-- Philosophy Section -->
   <section class="philosophy">
@@ -70,7 +78,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer-links">
-      <a href="#" title="Política de Privacidad">Política de Privacidad</a>
+      <a href="privacidad.html" title="Política de Privacidad">Política de Privacidad</a>
       <a href="#" title="Contacto" id="contacto-link">Contacto</a>
     </div>
     <div class="copyright"> 2025 Nemawashi AI. Todos los derechos reservados.</div>
@@ -110,6 +118,25 @@
         statusDiv.textContent = 'No se pudo abrir el cliente de correo. Escribe a info@nemawashi.ia';
         statusDiv.style.display = 'block';
       }
+    };
+  </script>
+  <script>
+    // Info extendida de cada caso
+    const useCases = [null,
+      `<div style='font-size:2.2rem;'>🧾</div><h2 style='font-size:1.2rem;font-weight:800;'>Solicitud de Documentación Fiscal Automatizada</h2><div style='margin-bottom:7px;color:#2a7a2a;font-weight:700;'>Ahorro de más del 80% del tiempo dedicado</div><div><b>Sector:</b> Gestorías / Asesorías</div><div><b>Problema:</b> Solicitar documentación a los clientes cada trimestre (para Hacienda, Seguridad Social, etc.) requería enviar correos manuales, revisar respuestas, y hacer seguimiento constante.</div><div><b>Solución:</b> Sistema con IA que consulta calendarios oficiales, envía emails personalizados, monitoriza respuestas y actúa si falta información o se acerca el plazo. También avisa a la empresa por WhatsApp o email.</div><div style='margin-top:7px;'><b>Resultado:</b><ul><li>✔️ Ahorro de más del 80% del tiempo dedicado</li><li>✔️ Mayor control y puntualidad en entregas</li><li>✔️ Menor carga administrativa y más flexibilidad</li></ul></div>`,
+      `<div style='font-size:2.2rem;'>🤖</div><h2 style='font-size:1.2rem;font-weight:800;'>Chatbot para Consultas de Declaraciones Fiscales</h2><div style='margin-bottom:7px;color:#2a7a2a;font-weight:700;'>Respuestas precisas en menos de 1 minuto</div><div><b>Sector:</b> Gestorías / Asesorías</div><div><b>Problema:</b> Los empleados recibían muchas preguntas sobre modelos fiscales antiguos (IVA, modelo 130, renta...), lo que implicaba buscar PDFs, identificar datos y hacer cálculos.</div><div><b>Solución:</b> Chatbot inteligente con acceso a los archivos de la empresa, que entiende preguntas y responde directamente con los datos correctos, desde escritorio o WhatsApp.</div><div style='margin-top:7px;'><b>Resultado:</b><ul><li>✔️ Respuestas precisas en menos de 1 minuto</li><li>✔️ Accesible para todo el equipo, sin depender de una persona</li><li>✔️ Menos errores y más eficiencia en el trabajo</li></ul></div>`,
+      `<div style='font-size:2.2rem;'>📅</div><h2 style='font-size:1.2rem;font-weight:800;'>Gestión de Citas para Fisioterapia</h2><div style='margin-bottom:7px;color:#2a7a2a;font-weight:700;'>Hasta 1h/día ahorrada</div><div><b>Sector:</b> Salud / Clínicas</div><div><b>Problema:</b> Organizar citas por WhatsApp o teléfono, reagendarlas y mantener la agenda al día ocupaba hasta 1 hora diaria.</div><div><b>Solución:</b> Agente inteligente que agenda, reprograma y confirma citas automáticamente desde cualquier canal (WhatsApp, email o teléfono), manteniendo siempre actualizada la agenda del fisioterapeuta.</div><div style='margin-top:7px;'><b>Resultado:</b><ul><li>✔️ Ahorro diario de tiempo administrativo</li><li>✔️ Agenda sincronizada y sin errores</li><li>✔️ Mejor experiencia para los pacientes</li></ul></div>`,
+      `<div style='font-size:2.2rem;'>🏠</div><h2 style='font-size:1.2rem;font-weight:800;'>Seguimiento de Interesados para Inmobiliarias</h2><div style='margin-bottom:7px;color:#2a7a2a;font-weight:700;'>Varias horas diarias ahorradas</div><div><b>Sector:</b> Inmobiliario</div><div><b>Problema:</b> Tras publicar propiedades, el equipo recibía muchos contactos que requerían respuestas, envío de información, coordinación de visitas y seguimiento, todo manual.</div><div><b>Solución:</b> IA que responde automáticamente a interesados, envía fichas personalizadas, propone fechas para visitas y recontacta si no hay respuesta.</div><div style='margin-top:7px;'><b>Resultado:</b><ul><li>✔️ Más visitas concertadas sin esfuerzo</li><li>✔️ Reducción de leads perdidos</li><li>✔️ Varias horas diarias ahorradas en tareas repetitivas</li></ul></div>`
+    ];
+    function showUseCase(idx) {
+      document.getElementById('usecase-modal-content').innerHTML = useCases[idx];
+      document.getElementById('usecase-modal-bg').style.display = 'flex';
+    }
+    document.getElementById('close-usecase-modal').onclick = function() {
+      document.getElementById('usecase-modal-bg').style.display = 'none';
+    };
+    document.getElementById('usecase-modal-bg').onclick = function(e) {
+      if (e.target === this) document.getElementById('usecase-modal-bg').style.display = 'none';
     };
   </script>
   <script type="module" src="/src/main.jsx"></script>
