Fix: política de privacidad accesible en Vercel (mover a /public, enlace absoluto en footer)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer-links">
-      <a href="privacidad.html" title="Política de Privacidad">Política de Privacidad</a>
+      <a href="/privacidad.html" title="Política de Privacidad">Política de Privacidad</a>
       <a href="#" title="Contacto" id="contacto-link">Contacto</a>
     </div>
     <div class="copyright"> 2025 Nemawashi AI. Todos los derechos reservados.</div>
