--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Soy Nema, tu asistente IA. Chatea conmigo 2 minutos y descubre <strong>GRATIS</strong> cómo la automatización puede eliminar tareas tediosas en tu día a día.</p>
     <div class="sima-placeholder" id="sima-chat-placeholder">
       <!-- Aquí se integrará el widget de chat de Nema -->
-      <div id="sima-chat-widget"></div>
+      <div id="sima-chat-widget" class="sima-chat-widget"></div>
     </div>
   </section>
 
