--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nemawashi AI - Automatización IA para PYMEs</title>
   <meta name="description" content="Automatización, agentes y soluciones de IA prácticas para PYMEs. Descubre cómo ahorrar tiempo hablando con Nema, nuestro agente IA." />
+  <meta name="keywords" content="automatización IA, inteligencia artificial, agentes inteligentes, productividad, PYMEs, chatbots, asistentes virtuales, optimización de procesos, ahorro de tiempo, soluciones IA, Nemawashi AI, automatización empresarial, IA para empresas, tareas repetitivas, digitalización, software inteligente, eficiencia operativa, transformación digital, tecnología para negocios" />
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/nemaWashiLogo.png">
   <!-- Tipografía Google Fonts -->
