Update with workflow and better copy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Nemawashi AI - Automatización IA para PYMEs</title>
   <meta name="description" content="Automatización, agentes y soluciones de IA prácticas para PYMEs. Descubre cómo ahorrar tiempo hablando con Nema, nuestro agente IA." />
   <meta name="keywords" content="automatización IA, inteligencia artificial, agentes inteligentes, productividad, PYMEs, chatbots, asistentes virtuales, optimización de procesos, ahorro de tiempo, soluciones IA, Nemawashi AI, automatización empresarial, IA para empresas, tareas repetitivas, digitalización, software inteligente, eficiencia operativa, transformación digital, tecnología para negocios" />
+  <link rel="stylesheet" href="styles/manifold-fonts.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/nemaWashiLogo.png">
   <!-- Tipografía Google Fonts -->
@@ -19,11 +20,39 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h1>¿Pierdes tiempo en tareas repetitivas? Habla con Nema</h1>
-    <p>Soy Nema, tu asistente IA. Chatea conmigo 2 minutos y descubre <strong>GRATIS</strong> cómo la automatización puede eliminar tareas tediosas en tu día a día.</p>
+    <h1>¿Sabías que puedes tener tu propio asistente de IA trabajando para ti?.</h1>
+    <p>Soy Nema, tu asistente virtual.
+      En solo 2 minutos te mostraré ejemplos de cómo podemos automatizar tareas en tu negocio:
+      citas, mensajes a clientes, recordatorios, informes… ¡y mucho más!</p>
     <div class="sima-placeholder" id="sima-chat-placeholder">
       <!-- Aquí se integrará el widget de chat de Nema -->
       <div id="sima-chat-widget" class="sima-chat-widget"></div>
+    </div>
+  </section>
+
+  <!-- Carousel de Casos Reales -->
+  <!-- Carrusel eliminado por solicitud del usuario -->
+
+  <!-- Proceso y AI Agent Section (Bloques lado a lado) -->
+  <section class="nemawashi-dual-section">
+    <h2 class="dual-section-title">Transforma tu negocio con un Agente de IA personalizado</h2>
+    <div class="dual-blocks-wrapper">
+      <div class="dual-block left-block">
+        <h2>Cómo construimos tu Agente IA</h2>
+        <div class="process-steps">
+          <div class="process-step"><span class="process-icon">🔎</span><strong> Discover</strong><br><span class="process-desc">Entendemos tu negocio, procesos y objetivos.</span></div>
+          <div class="process-step"><span class="process-icon">🎨</span><strong> Prototype</strong><br><span class="process-desc">Diseñamos el flujo de automatización adaptado a tus necesidades.</span></div>
+          <div class="process-step"><span class="process-icon">🛠️</span><strong> Build</strong><br><span class="process-desc">Construimos e integramos tu Agente IA en tus sistemas actuales.</span></div>
+          <div class="process-step"><span class="process-icon">📈</span><strong> Grow</strong><br><span class="process-desc">Monitoreamos y mejoramos continuamente a medida que creces.</span></div>
+        </div>
+      </div>
+      <div class="dual-block right-block">
+        <h2>¿Qué es un Agente de IA en tu negocio?</h2>
+        <p class="ai-agent-desc">Un Agente de Inteligencia Artificial es como un asistente digital que trabaja para ti, automatizando tareas, gestionando información y mejorando la experiencia de tus clientes, sin que necesites conocimientos técnicos.</p>
+        <div class="ai-agent-visual">
+          <div class="ai-agent-circle"><span>🤖</span></div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -69,12 +98,6 @@
       <div id="usecase-modal-content"></div>
     </div>
   </div>
-
-  <!-- Philosophy Section -->
-  <section class="philosophy">
-    <h3>IA Práctica, Resultados Reales</h3>
-    <p>En Nemawashi AI escuchamos primero. Entendemos tu problema real, proponemos soluciones simples y efectivas, y medimos el ahorro de tiempo. Sin venderte tecnología innecesaria ni complicaciones. Nuestro objetivo: que tu negocio gane tiempo y tranquilidad, de verdad.</p>
-  </section>
 
   <!-- Footer -->
   <footer>
