Mejoras UX: bienvenida con markdown puro, beneficios destacados en negrita, input con tipografía Manifold y límite de 150 caracteres

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       </div>
       <div class="dual-block right-block">
         <h2>¿Qué es un Agente de IA en tu negocio?</h2>
-        <p class="ai-agent-desc">Un Agente de Inteligencia Artificial es como un asistente digital que trabaja para ti, automatizando tareas, gestionando información y mejorando la experiencia de tus clientes, sin que necesites conocimientos técnicos.</p>
+        <p class="ai-agent-desc">Un Agente de Inteligencia Artificial es como un asistente digital que trabaja para ti, automatizando tareas, gestionando información y mejorando la experiencia de tus clientes, .<strong>sin que necesites conocimientos técnicos.</strong><p>
         <div class="ai-agent-visual">
-          <div class="ai-agent-circle"><span>🤖</span></div>
+          <div class="ai-agent-circle"><span>🌱</span></div>
         </div>
       </div>
     </div>
