--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
   <section class="use-cases">
     <h2>Casos de Uso Reales: IA que Ahorra Tiempo</h2>
     <div class="use-cards">
-      <!-- Caso 1: Solicitud de Documentación Fiscal Automatizada -->
+      <!-- Caso 1: Pedidos y Citas Automatizados (Pizzería/Clínicas) -->
+      <a class="use-card" href="src/caso-uso-pedidos-citas.html" target="_blank" rel="noopener">
+        <div class="use-card-icon" style="font-size:2.2rem;">🍕</div>
+        <div class="use-card-title">Pedidos y Citas 24/7</div>
+        <div class="use-card-benefit" style="color:#2a7a2a;font-size:1.09rem;font-weight:800;">Hasta 90% menos tareas manuales</div>
+        <div class="use-card-desc">Restaurantes, clínicas, servicios &mdash; Un agente virtual gestiona reservas y pedidos automáticamente, reduce errores y libera a tu equipo.</div>
+      </a>
+      <!-- Caso 2: Solicitud de Documentación Fiscal Automatizada -->
       <div class="use-card" onclick="showUseCase(1)">
         <div class="use-card-icon" style="font-size:2.2rem;">🧾</div>
         <div class="use-card-title">Solicitud de Documentación Fiscal</div>
@@ -115,7 +122,7 @@
       <input type="email" id="contact-email" name="email" required style="padding:10px 12px;font-size:1rem;border-radius:8px;border:1px solid #e0e0e0;" />
       <label for="contact-msg" style="font-size:1rem;">Mensaje</label>
       <textarea id="contact-msg" name="msg" required rows="4" style="padding:10px 12px;font-size:1rem;border-radius:8px;border:1px solid #e0e0e0;"></textarea>
-      <button type="submit" style="background:#444;color:#fff;padding:12px 0;border-radius:8px;font-size:1.07rem;font-weight:700;border:none;cursor:pointer;">Enviar</button>
+      
       <div id="contact-status" style="font-size:1rem;margin-top:8px;color:#2a7a2a;display:none;"></div>
     </form>
   </div>
