--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h2>Casos de Uso Reales: IA que Ahorra Tiempo</h2>
     <div class="use-cards">
       <!-- Caso 1: Pedidos y Citas Automatizados (Pizzería/Clínicas) -->
-      <a class="use-card" href="src/caso-uso-pedidos-citas.html" target="_blank" rel="noopener">
+      <a class="use-card" href="/caso-uso-pedidos-citas.html" target="_blank" rel="noopener">
         <div class="use-card-icon" style="font-size:2.2rem;">🍕</div>
         <div class="use-card-title">Pedidos y Citas 24/7</div>
         <div class="use-card-benefit" style="color:#2a7a2a;font-size:1.09rem;font-weight:800;">Hasta 90% menos tareas manuales</div>
