--- a/public/caso-uso-pedidos-citas.html
+++ b/public/caso-uso-pedidos-citas.html
@@ -101,7 +101,94 @@
           </p>
         </div>
       </div>
+      <p style="font-size:19px;line-height:1.5;color:#232323;margin-bottom:0;">
+        Juntos, el Agente Virtual automatiza la recepción y gestión inicial de solicitudes, mientras que el Dashboard te ofrece la supervisión y control total. Esta poderosa combinación es lo que te permite escalar, reducir errores y ofrecer una experiencia de cliente superior. A continuación, te mostramos cómo esta solución se aplica en la práctica en una pizzería real.
+      </p>
+    </section>
+
+    <!-- SECCIÓN 4: Demos en acción -->
+    <section style="margin-top:54px;padding-bottom:12px;">
+      <h2 style="font-size:26px;font-weight:800;color:#232323;margin-bottom:14px;letter-spacing:-0.5px;">Vea Nuestra Solución en Acción: El Caso Real de la Pizzería</h2>
+      <p style="font-size:19px;line-height:1.5;color:#232323;margin-bottom:28px;">
+        Ahora que conoces los componentes de nuestra solución, te invitamos a verla funcionando en un entorno real. Observa cómo gestionamos pedidos para una pizzería, y cómo esta misma tecnología se adapta para resolver las necesidades de cualquier negocio que gestione solicitudes importantes, desde reservas de hotel hasta citas médicas o servicios de reparación.
+      </p>
+      <div style="display:flex;flex-wrap:wrap;gap:32px 38px;align-items:stretch;margin-bottom:22px;">
+        <!-- Demo 1: Audio -->
+        <div style="flex:1 1 320px;min-width:270px;max-width:440px;background:#fff;border-radius:16px;box-shadow:0 2px 10px 0 rgba(34,34,34,0.06);padding:22px 22px 18px 22px;">
+          <div style="font-size:15px;font-weight:700;color:#e26a2c;margin-bottom:7px;">Demo 1: Interacción Telefónica - Pedido y Consulta</div>
+          <p style="font-size:16.5px;line-height:1.6;color:#232323;margin-bottom:10px;">
+            Escucha esta llamada real. Nuestro Agente Virtual guía al cliente para consultar el menú y hacer su pedido de pizza. Nota la naturalidad de la conversación y cómo se captura la información clave automáticamente. Esta misma fluidez se aplica al agendar o modificar citas, responder preguntas frecuentes o cualquier otra interacción telefónica automatizada que necesites en tu negocio.
+          </p>
+          <div style="background:#f8f7f4;border-radius:9px;padding:18px 12px;text-align:center;">
+            <audio controls style="width:100%;outline:none;border-radius:7px;">
+  <source src="../images/agenteLlamada.mp3" type="audio/mpeg">
+  Tu navegador no soporta la reproducción de audio.
+</audio>
+          </div>
+        </div>
+        <!-- Demo 2: Video -->
+        <div style="flex:1 1 320px;min-width:270px;max-width:440px;background:#fff;border-radius:16px;box-shadow:0 2px 10px 0 rgba(34,34,34,0.06);padding:22px 22px 18px 22px;">
+          <div style="font-size:15px;font-weight:700;color:#e26a2c;margin-bottom:7px;">Demo 2: Gestión vía Chat - Pedido y Consulta</div>
+          <p style="font-size:16.5px;line-height:1.6;color:#232323;margin-bottom:10px;">
+            Observa en este video una interacción por Telegram (válido también para WhatsApp). El cliente pide su pizza y consulta el menú cómodamente por chat. Destacamos la flexibilidad de atender a tus clientes en sus canales preferidos, facilitando la gestión de pedidos, la confirmación de citas, el envío de recordatorios o cualquier otra comunicación por mensajería.
+          </p>
+          <div style="background:#f8f7f4;border-radius:9px;padding:18px 12px;text-align:center;">
+            <video controls style="width:100%;max-height:260px;outline:none;border-radius:7px;background:#000;">
+  <source src="../images/agenteTelegram.mp4" type="video/mp4">
+  Tu navegador no soporta la reproducción de video.
+</video>
+          </div>
+        </div>
+      </div>
+      <div style="display:flex;flex-wrap:wrap;gap:32px 38px;align-items:stretch;margin-bottom:22px;">
+        <!-- Demo 3: Captura Dashboard Pedidos -->
+        <div style="flex:1 1 320px;min-width:270px;max-width:440px;background:#fff;border-radius:16px;box-shadow:0 2px 10px 0 rgba(34,34,34,0.06);padding:22px 22px 18px 22px;">
+          <div style="font-size:15px;font-weight:700;color:#e26a2c;margin-bottom:7px;">En el Dashboard: Visión Unificada de Solicitudes</div>
+          <p style="font-size:16.5px;line-height:1.6;color:#232323;margin-bottom:10px;">
+            Esta es una vista del Dashboard de gestión. Muestra de forma organizada todos los pedidos recibidos por el agente en tiempo real. Imagina esta misma pantalla mostrando tus citas, reservas o cualquier otra solicitud. Tu equipo tiene una vista clara, puede verificar detalles y hacer ajustes manuales si es necesario.
+          </p>
+          <div style="background:#f8f7f4;border-radius:9px;padding:18px 12px;text-align:center;">
+            <img src="../images/dashboardPedidos.png" alt="Dashboard de Pedidos" style="max-width:100%;border-radius:7px;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);background:#fff;" loading="lazy">
+          </div>
+        </div>
+        <!-- Demo 4: Captura Dashboard Tickets -->
+        <div style="flex:1 1 320px;min-width:270px;max-width:440px;background:#fff;border-radius:16px;box-shadow:0 2px 10px 0 rgba(34,34,34,0.06);padding:22px 22px 18px 22px;">
+          <div style="font-size:15px;font-weight:700;color:#e26a2c;margin-bottom:7px;">En el Dashboard: Optimización de la Operación</div>
+          <p style="font-size:16.5px;line-height:1.6;color:#232323;margin-bottom:10px;">
+            Desde el Dashboard, el sistema genera automáticamente documentos esenciales para la operación, como estos tickets de cocina detallados para cada pedido. Este proceso reduce drásticamente los errores manuales y optimiza tu flujo de trabajo, ya sea imprimiendo tickets de cocina, generando hojas de ruta para servicios a domicilio o preparando resúmenes para citas.
+          </p>
+          <div style="background:#f8f7f4;border-radius:9px;padding:18px 12px;text-align:center;">
+            <img src="../images/dashboardTickets.png" alt="Dashboard Tickets Cocina" style="max-width:100%;border-radius:7px;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);background:#fff;" loading="lazy">
+          </div>
+        </div>
+      </div>
+      <p style="font-size:18.5px;line-height:1.5;color:#232323;margin-bottom:0;">
+        Estas demostraciones son un ejemplo concreto de cómo nuestra solución maneja la interacción con el cliente y organiza la información. La eficiencia y precisión que ves aplicada a los pedidos de pizzería es directamente transferible a la gestión de citas y otras solicitudes en tu negocio.
+      </p>
+    </section>
+
+    <!-- SECCIÓN FINAL: Beneficios y ROI -->
+    <section style="margin-top:54px;padding-bottom:28px;">
+      <h2 style="font-size:26px;font-weight:800;color:#232323;margin-bottom:14px;letter-spacing:-0.5px;">Resultados Tangibles para Tu Negocio</h2>
+      <p style="font-size:19px;line-height:1.5;color:#232323;margin-bottom:22px;">
+        Más allá de la comodidad, nuestra solución se traduce en beneficios medibles para tu negocio. Implementar la automatización de pedidos, citas y cualquier tipo de solicitud significa:
+      </p>
+      <ul style="font-size:17.5px;line-height:1.7;color:#232323;margin-bottom:26px;padding-left:24px;max-width:650px;">
+        <li style="margin-bottom:10px;"><b>Ahorro Significativo de Tiempo:</b> Cada interacción automatizada ahorra entre 3 y 5 minutos, liberando a tu equipo para tareas de mayor valor y acelerando la atención al cliente.</li>
+        <li style="margin-bottom:10px;"><b>Eliminación de Errores Críticos:</b> Minimiza los errores costosos en pedidos y citas gracias a la precisión del agente virtual y la gestión centralizada. Menos equivocaciones, menos reclamaciones.</li>
+        <li style="margin-bottom:10px;"><b>Capacidad Simultánea Ilimitada:</b> Atiende múltiples solicitudes al mismo tiempo, sin colas ni esperas, maximizando tu potencial de ingresos y mejorando la experiencia de tus clientes.</li>
+        <li style="margin-bottom:10px;"><b>Atención Continua (24/7):</b> Captura oportunidades de negocio incluso fuera del horario comercial, asegurando que ningún pedido, cita o consulta quede sin respuesta.</li>
+        <li style="margin-bottom:10px;"><b>Applicabilidad Transversal:</b> Estos beneficios se aplican tanto a la gestión de pedidos en restaurantes y comercios, como a citas en clínicas, reservas en hoteles o cualquier otro sector que requiera organizar y responder solicitudes de clientes.</li>
+      </ul>
+      <p style="font-size:18.5px;line-height:1.5;color:#232323;margin-bottom:26px;">
+        ¿Listo para transformar la gestión de tus solicitudes, ahorrar tiempo y dinero, y ofrecer una experiencia excepcional a tus clientes?
+      </p>
+      <div style="text-align:center;">
+        <a href="mailto:info@nemawashi.ai" style="display:inline-block;padding:15px 38px;background:#e26a2c;color:#fff;border-radius:24px;font-size:19px;font-weight:700;text-decoration:none;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);transition:background 0.2s;">Contacta para una Demostración Personalizada</a>
+        <div style="font-size:15px;color:#666;margin-top:8px;">Puedes escribirnos directamente o hacer clic en el botón para agendar tu demo.</div>
+      </div>
     </section>
   </main>
 </body>
 </html>
+
