--- a/public/caso-uso-pedidos-citas.html
+++ b/public/caso-uso-pedidos-citas.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caso de Uso: Pedidos y Citas | Nemawashi AI</title>
-  <link rel="stylesheet" href="../styles/manifold-fonts.css">
-  <link rel="stylesheet" href="../styles.css">
-  <link rel="icon" type="image/png" href="../images/nemaWashiLogo.png">
+  <link rel="stylesheet" href="/styles/manifold-fonts.css">
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="icon" type="image/png" href="/images/nemaWashiLogo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
 @media (min-width: 900px) {
@@ -121,7 +121,7 @@
           </p>
           <div style="background:#f8f7f4;border-radius:9px;padding:18px 12px;text-align:center;">
             <audio controls style="width:100%;outline:none;border-radius:7px;">
-  <source src="../images/agenteLlamada.mp3" type="audio/mpeg">
+  <source src="/images/agenteLlamada.mp3" type="audio/mpeg">
   Tu navegador no soporta la reproducción de audio.
 </audio>
           </div>
@@ -134,7 +134,7 @@
           </p>
           <div style="background:#f8f7f4;border-radius:9px;padding:18px 12px;text-align:center;">
             <video controls style="width:100%;max-height:260px;outline:none;border-radius:7px;background:#000;">
-  <source src="../images/agenteTelegram.mp4" type="video/mp4">
+  <source src="/images/agenteTelegram.mp4" type="video/mp4">
   Tu navegador no soporta la reproducción de video.
 </video>
           </div>
@@ -148,7 +148,7 @@
             Esta es una vista del Dashboard de gestión. Muestra de forma organizada todos los pedidos recibidos por el agente en tiempo real. Imagina esta misma pantalla mostrando tus citas, reservas o cualquier otra solicitud. Tu equipo tiene una vista clara, puede verificar detalles y hacer ajustes manuales si es necesario.
           </p>
           <div style="background:#f8f7f4;border-radius:9px;padding:18px 12px;text-align:center;">
-            <img src="../images/dashboardPedidos.png" alt="Dashboard de Pedidos" style="max-width:100%;border-radius:7px;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);background:#fff;" loading="lazy">
+            <img src="/images/dashboardPedidos.png" alt="Dashboard de Pedidos" style="max-width:100%;border-radius:7px;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);background:#fff;" loading="lazy">
           </div>
         </div>
         <!-- Demo 4: Captura Dashboard Tickets -->
@@ -158,7 +158,7 @@
             Desde el Dashboard, el sistema genera automáticamente documentos esenciales para la operación, como estos tickets de cocina detallados para cada pedido. Este proceso reduce drásticamente los errores manuales y optimiza tu flujo de trabajo, ya sea imprimiendo tickets de cocina, generando hojas de ruta para servicios a domicilio o preparando resúmenes para citas.
           </p>
           <div style="background:#f8f7f4;border-radius:9px;padding:18px 12px;text-align:center;">
-            <img src="../images/dashboardTickets.png" alt="Dashboard Tickets Cocina" style="max-width:100%;border-radius:7px;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);background:#fff;" loading="lazy">
+            <img src="/images/dashboardTickets.png" alt="Dashboard Tickets Cocina" style="max-width:100%;border-radius:7px;box-shadow:0 2px 8px 0 rgba(34,34,34,0.09);background:#fff;" loading="lazy">
           </div>
         </div>
       </div>
